--- a/index.html
+++ b/index.html
@@ -1,76 +1,67 @@
 <!DOCTYPE html>
-<html lang="pt-BR">
+<html>
+
 <head>
-    <meta charset="UTF-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Técnicas de Plantio</title>
-    <style>
-        body {
-            font-family: Arial, sans-serif;
-            margin: 0;
-            padding: 0;
-            background-color: #f4f4f9;
-            color: #333;
-        }
-        header {
-            background-color: #4CAF50;
-            color: white;
-            padding: 1rem 0;
-            text-align: center;
-        }
-        nav {
-            text-align: center;
-            margin: 1rem 0;
-        }
-        nav a {
-            margin: 0 15px;
-            text-decoration: none;
-            color: #4CAF50;
-            font-weight: bold;
-        }
-        nav a:hover {
-            text-decoration: underline;
-        }
-        main {
-            padding: 2rem;
-            text-align: center;
-        }
-        footer {
-            background-color: #333;
-            color: white;
-            text-align: center;
-            padding: 1rem 0;
-            margin-top: 2rem;
-        }
-    </style>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Platio Agrícola</title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
 </head>
+
 <body>
     <header>
-        <h1>Técnicas de Plantio</h1>
-        <p>Aprenda as melhores práticas para cultivar suas plantas</p>
+        <h1>Plantio Agrícola</h1>
+        <nav>
+            <a href="index.html">Inicio</a>
+            <a href="plantio.html">Plantio Agrícola</a>
+            <a href="ferramentas.html">Ferramentas</a>
+            <a href="custos.html">Custos</a>
+            <a href="contato.html">Contato</a>
+        </nav>
     </header>
-    <nav>
-        <a href="#sobre">Sobre</a>
-        <a href="#tecnicas">Técnicas</a>
-        <a href="#contato">Contato</a>
-    </nav>
-    <main>
-        <section id="sobre">
-            <h2>Sobre Nós</h2>
-            <p>Somos apaixonados por agricultura e jardinagem. Nosso objetivo é compartilhar conhecimento sobre técnicas de plantio para ajudar você a cultivar com sucesso.</p>
-        </section>
-        <section id="tecnicas">
-            <h2>Técnicas de Plantio</h2>
-            <p>Descubra métodos inovadores e tradicionais para plantar e cuidar de suas plantas.</p>
-        </section>
-        <section id="contato">
-            <h2>Contato</h2>
-            <p>Entre em contato conosco para mais informações ou dúvidas.</p>
-            <p>Email: contato@tecnicasdeplantio.com</p>
-        </section>
-    </main>
+    <div class="banner-image">
+        <img src="https://images.pexels.com/photos/943700/pexels-photo-943700.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Imagem representando plantio agrícola">
+        <div class="banner-text">
+            <h2>Tudo sobre plantio agrícola em um só lugar!</h2>
+            <p>Descubra técnicas de plantio, ferramentas agrícolas, custos de produção e muito mais para otimizar sua plantação.</p>
+            <a href="#sobre">Saiba Mais</a>
+        </div>
+    </div>
+
+    <div class="sections" id="sobre">
+        <div class="section">
+            <h3>Sobre Plantio Agrícola</h3>
+            <p>Breve resumo das técnicas e importância do planejamento agrícola.</p>
+            <a href="plantio.html">Ver Mais</a>
+        </div>
+        <div class="section">
+            <h3>Ferramentas e Cálculos</h3>
+            <p>Simuladores, calculadoras e recursos essenciais para otimizar seu plantio.</p>
+            <a href="ferramentas.html">Acessar</a>
+        </div>
+        <div class="section">
+            <h3>Custos e Orçamentos</h3>
+            <p>Saiba como calcular custos e investir com eficiência no plantio.</p>
+            <a href="custos.html">Saiba Mais</a>
+        </div>
+        <div class="section">
+            <h3>Contato</h3>
+            <p>Fale conosco para mais informações e suporte.</p>
+            <a href="contato.html">Fale Conosco</a>
+        </div>
+    </div>
+
     <footer>
-        <p>&copy; 2023 Técnicas de Plantio. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Plantio Agrícola. Todos os direitos reservados.</p>
+        <p>
+            <a href="plantio.html">Plantio</a> |
+            <a href="ferramentas.html">Ferramentas</a> |
+            <a href="custos.html">Custos</a> |
+            <a href="contato.html">Contato</a>
+        </p>
     </footer>
 </body>
+
 </html>
+
