--- a/pagHOME.html
+++ b/pagHOME.html
@@ -1,18 +1,23 @@
+<!-- Este é o código HTML principal para o site "Plantio Agrícola" -->
+
 <!DOCTYPE html>
 <html>
 
 <head>
-    <meta charset='utf-8'>
-    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
-    <title>Plantio Agrícola</title>
-    <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <!-- Metadados do documento -->
+    <meta charset='utf-8'> <!-- Define a codificação de caracteres como UTF-8 -->
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'> <!-- Garante compatibilidade com o Internet Explorer -->
+    <title>Plantio Agrícola</title> <!-- Título da página -->
+    <meta name='viewport' content='width=device-width, initial-scale=1'> <!-- Torna o site responsivo -->
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'> <!-- Link para o arquivo CSS externo -->
 </head>
 
 <body>
+    <!-- Cabeçalho do site -->
     <header>
-        <h1>Plantio Agrícola</h1>
+        <h1>Plantio Agrícola</h1> <!-- Título principal do site -->
         <nav>
+            <!-- Menu de navegação -->
             <a href="index.html">Inicio</a>
             <a href="plantio.html">Plantio Agrícola</a>
             <a href="ferramentas.html">Ferramentas</a>
@@ -20,41 +25,51 @@
             <a href="contato.html">Contato</a>
         </nav>
     </header>
+
+    <!-- Seção de banner com imagem e texto -->
     <div class="banner-image">
         <img src="https://images.pexels.com/photos/943700/pexels-photo-943700.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=2" alt="Imagem representando plantio agrícola">
+        <!-- Texto sobreposto à imagem -->
         <div class="banner-text">
             <h2>Tudo sobre plantio agrícola em um só lugar!</h2>
             <p>Descubra técnicas de plantio, ferramentas agrícolas, custos de produção e muito mais para otimizar sua plantação.</p>
-            <a href="#sobre">Saiba Mais</a>
+            <a href="#sobre">Saiba Mais</a> <!-- Link para a seção "sobre" -->
         </div>
     </div>
 
+    <!-- Seções de conteúdo principais -->
     <div class="sections" id="sobre">
+        <!-- Seção sobre plantio agrícola -->
         <div class="section">
             <h3>Sobre Plantio Agrícola</h3>
             <p>Breve resumo das técnicas e importância do planejamento agrícola.</p>
-            <a href="plantio.html">Ver Mais</a>
+            <a href="plantio.html">Ver Mais</a> <!-- Link para mais informações -->
         </div>
+        <!-- Seção sobre ferramentas e cálculos -->
         <div class="section">
             <h3>Ferramentas e Cálculos</h3>
             <p>Simuladores, calculadoras e recursos essenciais para otimizar seu plantio.</p>
-            <a href="ferramentas.html">Acessar</a>
+            <a href="ferramentas.html">Acessar</a> <!-- Link para ferramentas -->
         </div>
+        <!-- Seção sobre custos e orçamentos -->
         <div class="section">
             <h3>Custos e Orçamentos</h3>
             <p>Saiba como calcular custos e investir com eficiência no plantio.</p>
-            <a href="custos.html">Saiba Mais</a>
+            <a href="custos.html">Saiba Mais</a> <!-- Link para custos -->
         </div>
+        <!-- Seção de contato -->
         <div class="section">
             <h3>Contato</h3>
             <p>Fale conosco para mais informações e suporte.</p>
-            <a href="contato.html">Fale Conosco</a>
+            <a href="contato.html">Fale Conosco</a> <!-- Link para contato -->
         </div>
     </div>
 
+    <!-- Rodapé do site -->
     <footer>
-        <p>&copy; 2025 Plantio Agrícola. Todos os direitos reservados.</p>
+        <p>&copy; 2025 Plantio Agrícola. Todos os direitos reservados.</p> <!-- Direitos autorais -->
         <p>
+            <!-- Links rápidos no rodapé -->
             <a href="plantio.html">Plantio</a> |
             <a href="ferramentas.html">Ferramentas</a> |
             <a href="custos.html">Custos</a> |
