Corrige a grafia de "Inicio" para "Início" e remove a página pagHOME.html, adicionando a página custos.html com informações detalhadas sobre custos agrícolas.

--- a/index.html
+++ b/index.html
@@ -13,7 +13,7 @@
     <header>
         <h1>Plantio Agrícola</h1>
         <nav>
-            <a href="index.html">Inicio</a>
+            <a href="index.html">Início</a>
             <a href="plantio.html">Plantio Agrícola</a>
             <a href="ferramentas.html">Ferramentas</a>
             <a href="custos.html">Custos</a>
@@ -55,6 +55,7 @@
     <footer>
         <p>&copy; 2025 Plantio Agrícola. Todos os direitos reservados.</p>
         <p>
+            <a href="index.html">Início</a> |
             <a href="plantio.html">Plantio</a> |
             <a href="ferramentas.html">Ferramentas</a> |
             <a href="custos.html">Custos</a> |
