--- a/index.html
+++ b/index.html
@@ -13,12 +13,14 @@
     <link
         href="https://fonts.googleapis.com/css2?family=Roboto:wght@300;400;500;700&family=Open+Sans:wght@400;600;700&display=swap"
         rel="stylesheet">
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <link rel="icon" href="imagens/logoCMS.png" type="image/png">
 </head>
 
 <body>
     <header>
         <div class="logo-container">
-            <img src="logoCMS.png" alt="Cultivo Moderno Sustentável (CMS)" class="logo-img">
+            <img src="imagens/logoCMS.png" alt="Cultivo Moderno Sustentável (CMS)" class="logo-img">
             <div class="logo-text">
                 <h1>Cultivo Moderno Sustentável</h1>
                 <p class="tagline">Agricultura Inteligente para o Futuro</p>
@@ -27,10 +29,10 @@
         <nav>
             <ul class="nav-list">
                 <li><a href="index.html" class="nav-link">Início</a></li>
-                <li><a href="plantio.html" class="nav-link">Técnicas Sustentáveis</a></li>
-                <li><a href="ferramentas.html" class="nav-link">Tecnologia Agrícola</a></li>
-                <li><a href="custos.html" class="nav-link">Gestão de Custos</a></li>
-                <li><a href="sobre.html" class="nav-link">Sobre Nós</a></li>
+                <li><a href="Técnicas Sustentáveis/plantio.html" class="nav-link">Técnicas Sustentáveis</a></li>
+                <li><a href="Tecnologia Agrícola/ferramentas.html" class="nav-link">Tecnologia Agrícola</a></li>
+                <li><a href="Gestão de Custos/custos.html" class="nav-link">Gestão de Custos</a></li>
+                <li><a href="Sobre Nós/sobre.html" class="nav-link">Sobre Nós</a></li>
             </ul>
             <div class="mobile-menu-btn">
                 <span></span>
@@ -50,7 +52,7 @@
                 <h1>Transforme sua agricultura com técnicas sustentáveis</h1>
                 <p class="hero-subtitle">Aprenda a aumentar sua produtividade enquanto preserva o meio ambiente</p>
                 <div class="hero-cta">
-                    <a href="plantio.html" class="cta-button">Comece Agora</a>
+                    <a href="Técnicas Sustentáveis/plantio.html" class="cta-button">Comece Agora</a>
                     <a href="#destaques" class="cta-button secondary">Conheça Mais</a>
                 </div>
             </div>
@@ -61,7 +63,7 @@
             <div class="features-grid">
                 <article class="feature-card">
                     <div class="feature-icon">
-                        <img src="icons/tecnicas-icon.svg" alt="Ícone de técnicas sustentáveis">
+                        <i class="fas fa-leaf fa-3x"></i>
                     </div>
                     <h3>Técnicas Sustentáveis</h3>
                     <p>Domine métodos inovadores que aumentam a produtividade enquanto reduzem o impacto ambiental.</p>
@@ -70,7 +72,7 @@
 
                 <article class="feature-card">
                     <div class="feature-icon">
-                        <img src="icons/tech-icon.svg" alt="Ícone de tecnologia">
+                        <i class="fas fa-tractor fa-3x"></i>
                     </div>
                     <h3>Tecnologia Agrícola</h3>
                     <p>Ferramentas digitais e equipamentos modernos para otimizar cada etapa do seu plantio.</p>
@@ -79,7 +81,7 @@
 
                 <article class="feature-card">
                     <div class="feature-icon">
-                        <img src="icons/custos-icon.svg" alt="Ícone de gráfico financeiro">
+                        <i class="fas fa-chart-line fa-3x"></i>
                     </div>
                     <h3>Gestão de Custos</h3>
                     <p>Métodos comprovados para reduzir despesas e maximizar o retorno do seu investimento.</p>
@@ -88,7 +90,7 @@
 
                 <article class="feature-card">
                     <div class="feature-icon">
-                        <img src="icons/sobre-icon.svg" alt="Ícone sobre nós">
+                        <i class="fas fa-users fa-3x"></i>
                     </div>
                     <h3>Sobre Nós</h3>
                     <p>Conheça nossa missão de promover uma agricultura mais eficiente e sustentável.</p>
@@ -105,7 +107,8 @@
                         "As técnicas do CMS reduziram meus custos em 30% enquanto aumentei minha produção!"
                     </blockquote>
                     <div class="testimonial-author">
-                        <img src="images/farmer1.jpg" alt="João Silva, agricultor">
+                        <img src="https://images.pexels.com/photos/9324328/pexels-photo-9324328.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="João Silva, agricultor">
                         <p>João Silva<br><span>Produtor de grãos</span></p>
                     </div>
                 </div>
@@ -115,7 +118,8 @@
                         "Finalmente encontrei recursos que unem sustentabilidade e resultados práticos!"
                     </blockquote>
                     <div class="testimonial-author">
-                        <img src="images/farmer2.jpg" alt="Maria Oliveira, agricultora">
+                        <img src="https://images.pexels.com/photos/7655918/pexels-photo-7655918.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="Maria Oliveira, agricultora">
                         <p>Maria Oliveira<br><span>Produtora de hortaliças</span></p>
                     </div>
                 </div>
@@ -125,7 +129,8 @@
                         "A calculadora de custos me ajudou a planejar melhor minha próxima safra."
                     </blockquote>
                     <div class="testimonial-author">
-                        <img src="images/farmer3.jpg" alt="Carlos Mendes, agricultor">
+                        <img src="https://images.pexels.com/photos/2280574/pexels-photo-2280574.jpeg?auto=compress&cs=tinysrgb&w=1260&h=750&dpr=1"
+                            alt="Carlos Mendes, agricultor">
                         <p>Carlos Mendes<br><span>Produtor de frutas</span></p>
                     </div>
                 </div>
@@ -148,12 +153,12 @@
     <footer class="site-footer">
         <div class="footer-content">
             <div class="footer-brand">
-                <img src="logoCMS-white.png" alt="CMS" class="footer-logo">
+                <img src="/imagens/logoCMS.png" alt="CMS" class="footer-logo">
                 <p>Agricultura Inteligente para o Futuro</p>
                 <div class="social-links">
-                    <a href="#" aria-label="Facebook"><img src="icons/facebook.svg" alt="Facebook"></a>
-                    <a href="#" aria-label="Instagram"><img src="icons/instagram.svg" alt="Instagram"></a>
-                    <a href="#" aria-label="YouTube"><img src="icons/youtube.svg" alt="YouTube"></a>
+                    <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
+                    <a href="#" aria-label="Instagram"><i class="fab fa-instagram"></i></a>
+                    <a href="#" aria-label="YouTube"><i class="fab fa-youtube"></i></a>
                 </div>
             </div>
 
@@ -176,13 +181,6 @@
                 </address>
             </div>
 
-            <div class="footer-newsletter">
-                <h3>Receba nossas dicas</h3>
-                <form class="newsletter-form">
-                    <input type="email" placeholder="Seu melhor e-mail" required>
-                    <button type="submit">Assinar</button>
-                </form>
-            </div>
         </div>
 
         <div class="footer-bottom">
