--- a/index.html
+++ b/index.html
@@ -192,8 +192,68 @@
         </div>
     </footer>
 
+    <div id="cookieConsent" class="cookie-consent">
+        <div class="cookie-content">
+            <p>Nós usamos cookies para melhorar sua experiência no site. Ao continuar navegando, você concorda com nossa
+                <a href="politica-privacidade.html" target="_blank">Política de Privacidade</a>.</p>
+            <div class="cookie-buttons">
+                <button id="acceptCookies" class="cookie-btn accept">Aceitar todos</button>
+                <button id="rejectCookies" class="cookie-btn reject">Rejeitar</button>
+                <button id="customizeCookies" class="cookie-btn customize">Personalizar</button>
+            </div>
+        </div>
+    </div>
+
+    <div id="cookiePreferences" class="cookie-modal">
+        <div class="modal-content">
+            <h3>Preferências de Cookies</h3>
+            <p>Selecione quais tipos de cookies você permite que utilizemos:</p>
+
+            <div class="cookie-option">
+                <div class="option-header">
+                    <h4>Cookies Essenciais</h4>
+                    <label class="switch">
+                        <input type="checkbox" checked disabled>
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <p class="option-description">Estes cookies são necessários para o funcionamento básico do site e não
+                    podem ser desativados.</p>
+            </div>
+
+            <div class="cookie-option">
+                <div class="option-header">
+                    <h4>Cookies de Desempenho</h4>
+                    <label class="switch">
+                        <input type="checkbox" id="performanceCookies" checked>
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <p class="option-description">Estes cookies nos ajudam a entender como os visitantes interagem com o
+                    site.</p>
+            </div>
+
+            <div class="cookie-option">
+                <div class="option-header">
+                    <h4>Cookies de Marketing</h4>
+                    <label class="switch">
+                        <input type="checkbox" id="marketingCookies">
+                        <span class="slider round"></span>
+                    </label>
+                </div>
+                <p class="option-description">Estes cookies são usados para mostrar anúncios relevantes para você.</p>
+            </div>
+
+            <div class="modal-buttons">
+                <button id="savePreferences" class="cookie-btn accept">Salvar preferências</button>
+                <button id="cancelPreferences" class="cookie-btn reject">Cancelar</button>
+            </div>
+        </div>
+    </div>
+
     <script src="js/menu.js" defer></script>
     <script src="js/animate.js" defer></script>
+    <script src="js/cookies.js" defer></script>
 </body>
 
 </html>
