Adiciona arquivo sobre.html e atualiza links no index.html para correção de caminhos

--- a/index.html
+++ b/index.html
@@ -153,7 +153,7 @@
     <footer class="site-footer">
         <div class="footer-content">
             <div class="footer-brand">
-                <img src="/imagens/logoCMS.png" alt="CMS" class="footer-logo">
+                <img src="imagens/logoCMS.png" alt="CMS" class="footer-logo">
                 <p>Agricultura Inteligente para o Futuro</p>
                 <div class="social-links">
                     <a href="#" aria-label="Facebook"><i class="fab fa-facebook-f"></i></a>
@@ -166,10 +166,10 @@
                 <h3>Links Rápidos</h3>
                 <ul>
                     <li><a href="index.html">Início</a></li>
-                    <li><a href="plantio.html">Técnicas</a></li>
-                    <li><a href="ferramentas.html">Tecnologia</a></li>
-                    <li><a href="custos.html">Custos</a></li>
-                    <li><a href="sobre.html">Sobre</a></li>
+                    <li><a href="Técnicas Sustentáveis/plantio.html">Técnicas</a></li>
+                    <li><a href="Tecnologia Agrícola/ferramentas.html">Tecnologia</a></li>
+                    <li><a href="Gestão de Custos/custos.html">Custos</a></li>
+                    <li><a href="Sobre Nós/sobre.html">Sobre</a></li>
                 </ul>
             </div>
 
