Corrige caminho do arquivo CSS nas páginas de Política de Privacidade e Termos de Uso

--- a/termos-uso.html
+++ b/termos-uso.html
@@ -7,7 +7,7 @@
         content="Termos de Uso do Cultivo Moderno Sustentável - Conheça as regras para utilização do nosso site e serviços">
     <title>Termos de Uso | Cultivo Moderno Sustentável</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
