--- a/politica-privacidade.html
+++ b/politica-privacidade.html
@@ -7,7 +7,7 @@
         content="Política de Privacidade do Cultivo Moderno Sustentável - Conheça como tratamos seus dados pessoais">
     <title>Política de Privacidade | Cultivo Moderno Sustentável</title>
     <meta name='viewport' content='width=device-width, initial-scale=1'>
-    <link rel='stylesheet' type='text/css' media='screen' href='../main.css'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link
